Done, to be tested:
---------------------------

ToDo:
---------------------
* Hooks must directly write to Service pipe
* On ShellExec/IAT-Hook: Create Process suspended! Hooks must resume process.
* Create Inline Hook instead of IAT-Hook
* GUI for SwitchToUser
* Create a "Default" SuRunner for users that are not in "SuRunners"
* MAP network drives
* Checksums for "Always Yes" programs
* Windows 7 compatibility
  Explorer is started via DCOM explorer.exe /FACTORY,{...
* use IContextMenu2/IContextMenu to implement an Icon/Popup menu
* Console SuRun support
* LOG-File for SuRun activity

To be done in future:
---------------------
* Use Radio-Buttons for (normal/elevated) Auto-Magic
* Hide/Show all context menu entries consistently
* make all context menu entries dynamically with ShellExt 
  (E.g.: msi with popup-menu)

Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------
SuRun 1.2.0.9 Beta12 - 2010-06-30
---------------------------------
* SuRuns Context Menu Extension add it's items only once. When righ clicking 
  the folder tree in Win7 Explorer calls the extension twice, one time for the 
  folder and one time for the folder background.
* IAT-Hook explicitly loads SuRunExt.dll to avoid unloading the Dll too early.
  In Win7 x64 a call to LoadLibW() in Unloaded_SuRunExt.dll GPFed.

SuRun 1.2.0.9 Beta11 - 2010-06-28
---------------------------------
* Windows 7 Explorer can be launched with admin rights by cheating the registry
  (AppID\\{CDCBCFCA-3CDC-436f-A4E2-0E02075250C2}","RunAs") THANKS to Junne!!!
* SuRunExtDll export functions wait for Initproc to be done

SuRun 1.2.0.9 Beta10 - 2010-01-12
---------------------------------