@@ -53,7 +53,7 @@ LINK32=link.exe
 # ADD BASE LINK32 kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:windows /machine:I386
 # ADD LINK32 kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:windows /machine:I386 /out:"../InstallSuRun.exe"
 # Begin Special Build Tool
-TargetPath=\SuRun\SuRun\InstallSuRun.exe
+TargetPath=\surun\SuRun\InstallSuRun.exe
 SOURCE="$(InputPath)"
 PostBuild_Desc=UPXing
 PostBuild_Cmds=upx --lzma $(TargetPath)
